deploy/digitalocean/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: newpaotang-prod
  labels:
    app.kubernetes.io/name: newpaotang
    app.kubernetes.io/part-of: newpaotang
    environment: production
